Fixed Jump behavior in Quiz when you hit the back button

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,13 @@
   margin: 5rem 1rem -2rem;
 }
 
+.hpp-dtc-p-home .hpp-dtc-lets-connect_title .secondary-title {
+  height: 32px;
+}
 
+.hpp-dtc-lets-connect_form .message .text::before {
+  top: 7.9rem;
+}
 
 @media (min-width: 768px) and (max-width: 1024px) {
   .hpp-dtc-lets-connect_slide-pagination {
